# cpp-mini-projects

./: .clang-format  .dockerignore  .gitignore  AIMentorGuidance.md  AmazonQ.md  Dockerfile  README.md  docker-build.sh  docker-compose.yml
learnings/: README.md
learnings/cpp/: classes.md  constructor_initialization.md  include_order.md
learnings/linux/: filesystem.md
memory_simulator/: CMakeLists.txt  README.md
memory_simulator/tests/: CMakeLists.txt  test_main.cpp
process_monitor/: CMakeLists.txt  README.md
process_monitor/include/: process.h
process_monitor/src/: main.cpp  process.cpp
process_monitor/tests/: CMakeLists.txt  test_process.cpp
resource_sandbox/: CMakeLists.txt  README.md
resource_sandbox/tests/: CMakeLists.txt
system_logger/: CMakeLists.txt  README.md
system_logger/tests/: CMakeLists.txt
thread_pool/: CMakeLists.txt  README.md
thread_pool/tests/: CMakeLists.txt
